--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ section {
     text-align: center;
 }
 
+section#brasil {
+    background-color: #008000;
+}
+
 section#sobre {
     background-color: #f4f4f4;
 }
