--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ section#elementos {
 
 section#midias {
     background-color: #ff5733;
-    color: #fff;
+    color: white;
 }
 
 section#galeria {
